Partial web authentication; unit tests & documentation for scripts
Added detailed documentation for drill-env.sh per John O. Since the
scripts are getting complex, added unit tests. At same time, started on
AM web UI authentication.